<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.PetDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/pet_image_view"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/pet_name_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_pet_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/pet_animal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/default_pet_animal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pet_breed_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_pet_breed" />
            </LinearLayout>

            <TextView
                android:id="@+id/pet_description_text_view"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/default_pet_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adopt_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adopt_btn_text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>